# social-media-aggregator

./: Cargo.toml  README.md
src/: main.rs
src/clients/: airtable_client.rs  mod.rs  twitter_client.rs
src/clients/airtable/: mod.rs  twitter.rs
src/clients/twitter/: mod.rs  tweets.rs  user.rs
src/data/: airtable.rs  twitter.rs
src/data/airtable/: mod.rs  twitter.rs
src/data/twitter/: mod.rs  tweet.rs  user.rs
src/services/: mod.rs  twitter.rs  twitter_service.rs
