[package]
name = "social-media-aggregator"
version = "0.1.0"
authors = ["Michael Barefield <wonkymic@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv_codegen = { version = "0.15.0" }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.134", features = ["derive"] }
serde_json = { version = "1.0.78" }
tokio = { version = "1", features = ["full"] }
lazy_static = { version = "1.4.0" }
